# prac

./: CMakeLists.txt  ast.cpp  ast.h  eval.cpp  eval.h  main.cpp  parser.cpp  parser.h  printer.cpp  printer.h
